--- a/styleSponsors.css
+++ b/styleSponsors.css
@@ -365,7 +365,8 @@
 
   @media screen and (max-width: 480px) {    
     .sponsor-btn {
-        top: 320px;
+        top: 340px;
+        left: 20%;
     }
   }
 
