--- a/styleSeason.css
+++ b/styleSeason.css
@@ -167,7 +167,7 @@ html {
       transform: translateY(-8px) rotate(-45deg);
   }
 }
-
+ 
 /* SEASONS CSS */
 .seasons {
     background-image: url("/images/TestFinalBlue.jpg");
@@ -224,6 +224,18 @@ html {
     align-items: center;
 }
 
+#CavBotsGen {
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  top: 150px;
+  width: 310px;
+  height: 180px;
+  z-index: 3;
+  border: 8px solid var(--darkBlue);
+  border-radius: 8px;
+}
+
 @media screen and (max-width: 1020px) {
   .seasons {
     background-image: url("/images/TestFinalBlue.jpg");
@@ -256,6 +268,10 @@ html {
     top: 200px;
     position: absolute;
   }
+
+  #CavBotsGen {
+    top: 110px;
+  }
 }
 
 @media screen and (max-width: 760px) {
@@ -286,6 +302,18 @@ html {
       max-width: 350px;
       text-align: center;
       position: absolute;
+  }
+
+  #CavBotsGen {
+    top: 140px;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  #CavBotsGen {
+    top: 130px;
+    width: 260px;
+    height: 160px;
   }
 }
 
