--- a/style.css
+++ b/style.css
@@ -207,7 +207,7 @@
     margin-left: 55%;  
     justify-content: center;
     align-items: center; 
-    margin-top: 120px;
+    top: 120px;
 }
 
 .main-content h1 {
