--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@
     /* position: relative; */
 }
 
-.main-content img{
+.main-contnet img {
     display: flex;
     margin-left: 55%;  
     justify-content: center;
